# git-branch-cleaner

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: main.rs
src/cli/: mod.rs  ui.rs
src/git/: branch.rs  finder.rs  mod.rs
