[package]
name = "git-branch-cleaner"
version = "0.1.0"
edition = "2021"
authors = ["Cascade"]
description = "A cross-platform CLI tool for cleaning Git branches"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
git2 = "0.18"
chrono = "0.4"
walkdir = "2.4"
dialoguer = "0.11"
thiserror = "1.0"
